// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test du composant Tableau > DOIT afficher correctement les en-têtes et les lignes 1`] = `
<table
  class="min-w-full border-spacing-0 rounded-t-xl border border-solid border-gris-sombre text-sm shadow-lg"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="text-center first:text-left"
      >
        <button
          aria-label="Trier par n dossier"
          class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc relative border-none bg-transparent text-bleu hover:bg-transparent focus:bg-transparent"
          title="Trier par n dossier"
          type="button"
        >
          <span
            class="text-sm normal-case underline"
          >
            N dossier
          </span>
          <svg
            class="absolute -right-1 top-1/2 -translate-y-1/2  "
            fill="currentColor"
            font-size="inherit"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
            />
          </svg>
        </button>
      </th>
      <th
        class="text-center first:text-left"
      >
        <button
          aria-label="Trier par nature acte"
          class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc relative border-none bg-transparent text-bleu hover:bg-transparent focus:bg-transparent"
          title="Trier par nature acte"
          type="button"
        >
          <span
            class="text-sm normal-case underline"
          >
            Nature acte
          </span>
          <svg
            class="absolute -right-1 top-1/2 -translate-y-1/2 opacity-0 "
            fill="currentColor"
            font-size="inherit"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
            />
          </svg>
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class=" odd:bg-bleu/15"
    >
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        001
      </td>
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        Naissance mineur
      </td>
    </tr>
    <tr
      class=" odd:bg-bleu/15"
    >
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        002
      </td>
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        Naissance mineur
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Test du composant Tableau > DOIT afficher un message lorsqu'il n'y a pas de lignes 1`] = `
<table
  class="min-w-full border-spacing-0 rounded-t-xl border border-solid border-gris-sombre text-sm shadow-lg"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="text-center first:text-left"
      >
        <button
          aria-label="Trier par n dossier"
          class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc relative border-none bg-transparent text-bleu hover:bg-transparent focus:bg-transparent"
          title="Trier par n dossier"
          type="button"
        >
          <span
            class="text-sm normal-case underline"
          >
            N dossier
          </span>
          <svg
            class="absolute -right-1 top-1/2 -translate-y-1/2  "
            fill="currentColor"
            font-size="inherit"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
            />
          </svg>
        </button>
      </th>
      <th
        class="text-center first:text-left"
      >
        <button
          aria-label="Trier par nature acte"
          class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc relative border-none bg-transparent text-bleu hover:bg-transparent focus:bg-transparent"
          title="Trier par nature acte"
          type="button"
        >
          <span
            class="text-sm normal-case underline"
          >
            Nature acte
          </span>
          <svg
            class="absolute -right-1 top-1/2 -translate-y-1/2 opacity-0 "
            fill="currentColor"
            font-size="inherit"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="m4 12 1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
            />
          </svg>
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="py-2"
        colspan="2"
      >
        <div
          class="flex flex-col items-center"
        >
          <svg
            aria-hidden="true"
            class="text-2xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM12 17.3c-.72 0-1.3-.58-1.3-1.3 0-.72.58-1.3 1.3-1.3.72 0 1.3.58 1.3 1.3 0 .72-.58 1.3-1.3 1.3zm1-4.3h-2V7h2v6z"
            />
          </svg>
          <div>
            Aucune donnée disponible
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
